--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ Our research topics cover the full data management pipeline, from the foundation
       <li><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/vicenc-torra/">Vicenç Torra</a>: Full Professor</li>
       <li><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/artur-lugmayr/">Artur Lugmayr</a>: Associate Professor</li>
       <li><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/juan-carlos-nieves/">Juan Carlos Nieves</a>: Associate Professor</li>
-      <li><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/magdalena-ortiz/">Magdalena Oritz</a>: Associate Professor</li>
+      <li><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/magdalena-ortiz/">Magdalena Ortiz</a>: Associate Professor</li>
       <li><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/ola-ringdahl/">Ola Ringdahl</a>: Associate Professor</li>
       <li><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/mantas-simkus/">Mantas Šimkus</a>: Associate Professor</li>
       <li><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/timotheus-kampik/">Timotheus Kampik</a>: Adjunct Lecturer</li>
@@ -312,7 +312,7 @@ Our research topics cover the full data management pipeline, from the foundation
     </tr>
     <br><br>
     <tr>
-    <td><strong><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/magdalena-ortiz/">Magdalena Oritz</a></strong></td>
+    <td><strong><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/magdalena-ortiz/">Magdalena Ortiz</a></strong></td>
     <td><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/ola-ringdahl/">Ola Ringdahl</a></td>
     <td><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/mantas-simkus/">Mantas Šimkus</a></td>
     <td><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/timotheus-kampik/">Timotheus Kampik</a></td>
