--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     
         Data Management and Intelligent Systems (DAISy) is a collective of researchers at the Department of Computing Science at Umeå University who work on foundations and applications of data management and intelligent systems, covering a diverse range of sub-fields. Our basic research work contributes to the advancement of fundamental research frontiers, in particular to the formal core of computer science and AI; the applied research we conduct has a direct real-world impact, facilitating better decision-making in and about complex information systems.
 
-
+<!-- test -->
 <h2 id="topics"></h2> <br>
 <h2> Research Topics</h2>
 Our research topics cover the full data management pipeline, from the foundations of database theory, via inference/querying to visual analytics and decision-making in application scenarios. Key topics of expertise are the following: <br><br>
