--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- <h1 class="remove-bottom">DAISY</h1> -->
         <h4>Data Management and Intelligent Systems (DAISY)</h4>
         <h5>Competence Cluster at the <a href="https://www.umu.se/en/department-of-computing-science/">CS Department</a> of <a href="https://www.umu.se">Umeå University</a></h5>
-        <p>DAISY is a collective of <a href="#researchers-section">researchers</a> at the Department of Computing Science at Umeå University who work on foundations and applications of data management and intelligent systems, covering a diverse range of sub-fields. Our basic research work contributes to the advancement of fundamental research frontiers, in particular to the formal core of computer science and AI; the applied research we conduct has a direct real-world impact, facilitating better decision-making in and about complex information systems.</p>
+        <p>DAISY is a collective of <a href="#researchers-section">researchers</a> at the Department of Computing Science at Umeå University who work on foundations and applications of data management and intelligent systems, covering a diverse range of sub-fields. Our research work contributes to the advancement of fundamental research frontiers, in particular to the formal core of computer science and AI; our applied research has a direct real-world impact, facilitating better decision-making in and about complex information systems.</p>
 
       </div>
     </div>
