--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <ul>
         <li><strong>(Virtual) Knowledge Graphs</strong> </li>
         <li><strong>Visualization</strong> </li>
-        <li><strong>Healcare</strong> </li>
+        <li><strong>Healthcare</strong> </li>
         <li><strong>Automation in agriculture and forestry</strong> </li>
         <li><strong>Engineering of intelligent systems</strong> </li>
         <li><strong>Business process and decision management</strong> </li>
