--- a/index.html
+++ b/index.html
@@ -192,6 +192,35 @@
     <table class="header-table" cellspacing="0" cellpadding="0">
       <tr>
         <td class="side-row">
+          <img class="avatar" src="./img/helena.webp" alt="Helena - Avatar" height="150" >
+        </td>
+        <td class="side-row">
+          <img class="avatar" src="./img/michele.webp" alt="Michele - Avatar" height="150" >
+        </td>
+        <td class="side-row">
+          <img class="avatar" src="./img/andreas.webp" alt="Andreas - Avatar" height="150">
+        </td>
+        <td class="side-row">
+          <img class="avatar" src="./img/romuald.webp" alt="Romuald - Avatar" height="150">
+        </td>
+      </tr>
+      <br><br>
+      <tr>
+        <td><strong><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/helena-lindgren/">Helena Lindgren</a></strong></td>
+        <td><a style="font-weight: bolder !important;" href="https://www.umu.se/personal/michele-persiani/">Michele Persiani</a></td>
+        <td><a style="font-weight: bolder !important;" href="https://www.umu.se/personal/andreas-brannstrom/">Andreas Brännström</a></td>
+        <td><a style="font-weight: bolder !important;" href="https://www.umu.se/en/staff/romuald-esdras-wandji/">Romuald Esdras Wandji</a></td>
+      </tr>
+      <tr>
+        <td>Full Professor</td>
+        <td>PostDoc</td>
+        <td>PhD Student</td>
+        <td>PhD Student</td>
+      </tr>
+    </table>
+    <table class="header-table" cellspacing="0" cellpadding="0">
+      <tr>
+        <td class="side-row">
           <img class="avatar" src="./img/arka.webp" alt="Arka - Avatar" height="150" >
         </td>
         <td class="side-row">
